// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DzLabel /> displays the labelAction correctly 1`] = `
.c7 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  background: #ffffff;
  color: #8e8ea9;
  padding: 12px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c5 {
  padding-left: 4px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.14;
  color: #666687;
}

.c2 {
  border-radius: 1.625rem;
}

.c6 {
  border: none;
  padding: 0;
  background: transparent;
}

.c6 svg {
  width: 12px;
  height: 12px;
  fill: #8e8ea9;
}

.c6 svg path {
  fill: #8e8ea9;
}

<div>
  <div
    class="c0"
  >
    <div
      class=""
    >
      <div
        class="c1 c2"
      >
        <div
          class="c3"
        >
          <span
            class="c4"
          >
            dz
             (
            1
            )
          </span>
          <div
            class="c5"
          >
            <span>
              <button
                aria-describedby="tooltip-1"
                aria-label="i18n"
                class="c6"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.59 23.679l-.044-.007a.045.045 0 00.043.007zM22.334 8.345a.295.295 0 00-.572-.033.295.295 0 01-.28.206h-.829a.294.294 0 01-.152-.042l-1.199-.72a.293.293 0 00-.152-.042h-1.918a.293.293 0 00-.164.05l-2.365 1.577a.296.296 0 00-.132.248v2.236a.296.296 0 00.157.261l3.101 1.656a.297.297 0 01.156.257L18 15.257a.295.295 0 00.153.255l1.246.69a.296.296 0 01.152.258v2.604a.295.295 0 00.492.221c.502-.442 1.223-1.088 1.319-1.236a11.14 11.14 0 001.174-2.415c.68-1.966.143-5.501-.202-7.289zM13.629 14.507l-3.286-2.464a.214.214 0 00-.129-.043H8.655a.203.203 0 01-.143-.06l-.735-.734a.215.215 0 00-.152-.063h-2.85a.203.203 0 01-.143-.347l.451-.45a.202.202 0 01.144-.06H6.96a.428.428 0 00.413-.312l.369-1.313a.214.214 0 01.107-.132L9.32 7.77a.203.203 0 00.11-.18v-.67c0-.041.013-.082.037-.116l.782-1.126a.2.2 0 01.095-.074l1.095-.411a.203.203 0 00.131-.19v-.61a.203.203 0 00-.09-.17l-1.097-.73a.205.205 0 00-.206-.012l-1.493.747a.202.202 0 01-.214-.022l-.709-.56a.203.203 0 01.006-.321l.575-.424a.202.202 0 00-.005-.33l-.896-.625a.203.203 0 00-.214-.012c-.324.178-1.275.703-1.613.939A11.222 11.222 0 001.964 7.16c-.098.201-.218.406-.23.627-.012.222-.185.716-.258.915a.202.202 0 00.013.166l1.912 3.514a.2.2 0 00.074.077l2.012 1.207a.202.202 0 01.097.147l.403 2.921a.204.204 0 00.086.14l1.57 1.08a.215.215 0 01.088.132l.832 3.954a.193.193 0 00.027.065c.078.126.39.59.766.658-.035.01-.066.031-.101.042.09.015.18.036.268.062.107.029.214.053.321.076.168.034.184.06.265-.09.107-.199.23-.268.321-.292a.206.206 0 00.155-.155l.54-2.501a.214.214 0 01.085-.13l2.411-1.709a.214.214 0 00.09-.175v-3.212a.215.215 0 00-.082-.172z"
                    fill="#32324D"
                  />
                  <path
                    d="M12.322.857s-.196.011-.236.012a11.114 11.114 0 00-3.932.845c.13.09-.093.173-.093.173l.35.684h1.875l1.286.643 1.125-.643-.375-1.714zM17.263 4.718l.863-.75a.215.215 0 00.031-.29.214.214 0 00-.082-.067l-1.007-.467a.214.214 0 00-.284.101l-.415.869a.214.214 0 00.08.274l.56.35a.215.215 0 00.254-.02zM21.302 5.822l-.312-.483a.3.3 0 01-.014-.023c-.056-.115-.522-1.055-.91-1.42-.293-.276-.375-.196-.399-.135a.202.202 0 01-.063.085l-1.545 1.25a.214.214 0 01-.135.047h-.8a.214.214 0 00-.151.062l-.643.643a.215.215 0 000 .304l.643.642a.213.213 0 00.151.063h4.027a.214.214 0 00.215-.223l-.03-.705a.215.215 0 00-.034-.107z"
                    fill="#32324D"
                  />
                  <path
                    d="M12 2.143A9.857 9.857 0 115.03 5.03 9.791 9.791 0 0112 2.143zM12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0z"
                    fill="#32324D"
                  />
                </svg>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c7"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`<DzLabel /> displays the name of the dz when the label is empty 1`] = `
.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  background: #ffffff;
  color: #8e8ea9;
  padding: 12px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.14;
  color: #666687;
}

.c2 {
  border-radius: 1.625rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class=""
    >
      <div
        class="c1 c2"
      >
        <div
          class="c3"
        >
          <span
            class="c4"
          >
            test
             (
            1
            )
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c5"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`<DzLabel /> renders and matches the snapshot 1`] = `
.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  background: #ffffff;
  color: #8e8ea9;
  padding: 12px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.14;
  color: #666687;
}

.c2 {
  border-radius: 1.625rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class=""
    >
      <div
        class="c1 c2"
      >
        <div
          class="c3"
        >
          <span
            class="c4"
          >
            dz
             (
            1
            )
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c5"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
